--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 .navbar {
     padding: 2rem;
     background-color: #f5f6f7;
+    font-size: 20px;
 }
 
 .navbar-collapse {
@@ -224,23 +225,27 @@ h1 {
     left: 50%;
     transform: translate(-50%, -50%);
     /* background: rgba(0, 0, 0, 0.6); */
-    color: #2c3e50 ;
+    color:  #0d6efd;
     padding: 10px 20px;
     border-radius: 5px;
     opacity: 1; /* Siempre visible */
     font-size: 1.2rem;
     font-weight: bold;
     text-align: center;
+   
+    
 }
 
 .overlay .iconos-contenedor{
-    display: flex;
+    /* display: flex; */
+    display: flexbox;
 }
 
 .overlay i{
-    color: black;
+    color: #2c3e50;
     font-size: 40px;
     margin: 10px;
+    
 }
 
 /* ARTICULOS */
@@ -374,9 +379,9 @@ footer{
 }
 
 .footer-logo{
-    height: 80px;
-    width: 80px;
-    margin:10px
+    width: 90px;
+    margin:10px;
+    border-radius: 50%;
 }
 
 .footer-text{
@@ -421,4 +426,24 @@ footer{
     font-size: 15px;
     color: #aeaeae;
     padding: 20px;
+}
+
+/* NOMBRES DE PROYECTOS */
+.nombre-proyecto {
+    text-align: center;
+    margin: 15px 0;
+    font-size: 1.4rem;
+    font-family: "Bebas Neue", sans-serif;
+    color: #615151;
+    letter-spacing: 1px;
+}
+
+/* Ajuste overlay */
+.proyecto .overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 1;
+    width: 100%;
 }
